tests/snapshots/fixtures__fixture@lsp__relationships__named_relationship_dynamic_reference_ok.snap
---
source: tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string))
          (software_system identifier:
            (identifier) name:
            (string))
          (relationship identifier:
            (identifier) source:
            (identifier) operator:
            (relationship_operator) destination:
            (identifier) attribute:
            (string))))
      (views body:
        (views_block
          (dynamic_view scope:
            (wildcard) body:
            (dynamic_view_block
              (dynamic_relationship_reference relationship:
                (identifier) description:
                (string)))))))))
