tests/snapshots/fixtures__fixture@lsp__relationships__named_relationship_missing_destination_err.snap
---
source: tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (person identifier:
            (identifier) name:
            (string))
          (software_system identifier:
            (identifier) name:
            (string))
          (ERROR
            (identifier)
            (identifier)
            (relationship_operator)
            (string))))
      (views body:
        (views_block
          (system_landscape_view body:
            (system_landscape_view_block
              (include_statement value:
                (identifier)))))))))
